<resources>
    <string name="app_name">Bop</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="signed_up">Signed Up!!</string>
    <string name="logged_in">Logged In!!</string>
    <string name="fullName">First and Last Name</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="nearby_users">Nearby Users</string>
    <string name="playlist">Playlist</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="topHitsURL">https://api.spotify.com/v1/playlists/37i9dQZF1DXcBWIGoYBM5M/tracks</string>
    <string name="searchURL">https://api.spotify.com/v1/search</string>
    <string name="cancelButtonDescription">go back to login activity</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="invalid_sign_up">Invalid Sign Up</string>
    <string name="mismatch_passwords">Passwords Do Not Match</string>
    <string name="username_hint">Fatema5352</string>
    <string name="password_hint">*********</string>
    <string name="FullName_hint">Fatema Neemuchwala</string>
    <string name="don_t_have_an_account">Do not have an account? <font color='#0E58EA'>Sign Up!</font></string>
    <string name="google_maps_api_key">AIzaSyDHTf5QWPK-f0jjS-9d5w9-YegPm4_matM</string>
    <string name="you_must_allow_bop_access_to_your_location_while_using_app">You must allow Bop access to your location while using app</string>
    <string name="account">Account</string>
    <string name="profile_greeting">Hi Fatema!</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="playlist_name_example">Study Music</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="create_playlist">Create Playlist</string>
    <string name="wrong_spotify_account">Incorrect Spotify Account. The current Spotify account is: </string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="added_song"> Added to </string>
    <string name="default_favs">\'s Favs</string>
    <string name="is_this_your_spotify_account">Is this your Spotify Account?</string>
    <string name="artist_name">Olivia Rodrigo</string>
    <string name="browse">Browse</string>
    <string name="display_name">fatema_neemuchwala</string>
</resources>