<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bnSearch"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:showAsAction="always" />
    <item
        android:id="@+id/bnPlaylists"
        android:icon="@drawable/ic_baseline_library_music_24"
        android:title="@string/playlist"
        app:showAsAction="always" />
    <item
        android:id="@+id/bnNearbyUsers"
        android:icon="@drawable/ic_baseline_location_on_24"
        android:title="@string/nearby_users"
        app:showAsAction="always" />
    <item
        android:id="@+id/bnProfile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile"
        app:showAsAction="always" />
</menu>