<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SignUpActivity">


    <ImageButton
        android:id="@+id/btnCancelSignUp"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:backgroundTint="@color/white"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/cancelButtonDescription"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />

    <EditText
        android:id="@+id/etFullNameSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@+id/btnCancelSignUp"
        android:hint="@string/fullName"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/etUsernameSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@+id/etFullNameSignUp"
        android:hint="@string/username"
        android:inputType="text"/>

    <EditText
        android:id="@+id/etPasswordSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@+id/etUsernameSignUp"
        android:layout_alignParentEnd="true"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/etConfirmPasswordSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@+id/etPasswordSignUp"
        android:layout_alignParentEnd="true"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/needLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etConfirmPasswordSignUp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:text="@string/you_must_allow_bop_access_to_your_location_while_using_app"/>

    <Button
        android:id="@+id/btnSignUpModal"
        android:layout_below="@+id/needLocation"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"/>

</RelativeLayout>
