<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/purple_200">


    <ImageButton
        android:id="@+id/btnCancelNewPlaylist"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="4dp"
        android:contentDescription="@string/cancelButtonDescription"
        app:srcCompat="@android:drawable/btn_dialog" />

    <EditText
        android:id="@+id/etPlaylistName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_below="@+id/btnCancelNewPlaylist"
        android:layout_marginEnd="5dp"
        android:textColor="@color/white"
        android:hint="@string/playlist_name"
        android:inputType="textMultiLine"/>

    <Button
        android:id="@+id/btnCreatePlaylist"
        android:layout_below="@+id/etPlaylistName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/create_playlist"/>

</RelativeLayout>
